# good-news-briefing

./: .env.example  .gitignore  LEARNINGS.md  README.md  good_news_briefing.py  pyproject.toml  requirements.txt
evals/: fixtures.json  optimism_fixtures.json  run_eval.py  run_optimism_eval.py
scripts/: check_no_think.py  diagnose_gemma.py
src/good_news/: __init__.py  __main__.py  cli.py  config.py  deliver.py  guardrails.py  llm.py  models.py  pipeline.py  prompts.py  sources.py  store.py
tests/: README.md  conftest.py  test_guardrails.py  test_llm.py  test_models.py  test_pipeline.py  test_pipeline_run.py  test_sources.py  test_store.py
