[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "good-news-briefing"
version = "1.0.0"
description = "A self-hosted RSS -> local-LLM -> digest pipeline for good news."
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
good-news = "good_news.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
